# deeplearning

./: .config.vim  .gitignore  .gitmodules  README.md  demo.cpp  main.cpp
.github/workflows/: test.yml
.workflow/: test.yml
demo/: demo.cpp
src/: CMakeLists.txt  build.sh  main.cpp
src/deeplearning/: neural_network.h  neural_network_loader.h
src/deeplearning/activate/: activate_base.h  activate_factory.h  relu_activate.h  sigmoid_activate.h  tanh_activate.h
src/deeplearning/loss/: cross_entropy_loss.h  loss_base.h  loss_factory.h  mse_loss.h
src/deeplearning/optimizer/: momentum_optimizer.h  optimizer_base.h  optimizer_factory.h  sgd_optimizer.h
src/deeplearning/param_init/: he_param_init.h  normal_random_param_init.h  param_init_base.h  param_init_factory.h  uniform_random_param_init.h  xavier_param_init.h  zero_param_init.h
src/deeplearning/softmax/: none_softmax.h  softmax_base.h  softmax_factory.h  std_softmax.h
src/deeplearning/util/: random.h
src/demo/mnist/: CMakeLists.txt  main.cpp  mnist_data.h
src/drawtool/: matplot_draw.h
src/test/: CMakeLists.txt  Makefile  draw.py  main.cpp  neural_network.h  neural_network_loader.h  neural_network_loader_test.h  neural_network_test.h
src/test/softmax/: std_softmax_test.h
src/util/: random.h
